2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make `pgtable-manager' INSERT commands faster.

	* postgres-table.scm (pgtable-manager):
	compute number of columns and type names once.
	(pgtable-manager serial?): Incorporate intneral proc into unique caller.
	(pgtable-manager qstring<-colname): Likewise.
	(pgtable-manager insert-variant): Delete internal proc.
	(pgtable-manager do-insert): New internal proc.
	(pgtable-manager insert-values): Likewise.
	(pgtable-manager insert-col-values): Likewise.
	(pgtable-manager insert-alist): Likewise.
	(pgtable-manager die!): No longer treat `insert-alist',
	`insert-col-values' and `insert-values' dynamically.

2008-08-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Debogify: Make `pgtable-manager' INSERTs no longer strip `serial' cols.

	* postgres-table.scm (pgtable-manager insert-variant clean-defs):
	Delete internal proc; update callers to elide its call.

2008-08-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make `pgtable-manager' faster.

	* postgres-table.scm: From module (ice-9 common-list),
	select also `pick-mappings'.
	(fmt): Incorporate into `pgtable-manager'.
	(symbol->qstring, serial? col-defs, drop-proc, create-proc)
	(->db-insert-string, clean-defs, pre-insert-into, insert-values-proc)
	(insert-col-values-cmd, insert-col-values-proc, insert-alist-proc)
	(delete-rows-proc, update-col-proc, select-proc): Likewise.
	(pgtable-manager): Compute each column name's "qstring" only once.

2008-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	C optimization: Declare unboxing funcs inline.

	* libpq.c (xc_unbox, res_unbox, sepo_unbox): Declare `inline'.

2008-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Remove gc- and init-debugging macros.

	* libpq.c (GC_PRINT, INIT_PRINT): Delete macros
	and surrounding pre-processor conditionals.
	(xc_mark, xc_free): Remove `GC_PRINT' call.
	(res_mark, res_free, sepo_mark, sepo_free): Likewise.
	(init_module): Remove `INIT_PRINT' call.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
